--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -31,4 +31,30 @@ body {
 .btn-login:hover {
   background-color: #1e3771;
   color: #ffffff;
+}
+
+header {
+  padding: 180px 0 165px;
+  margin-top: -70px;
+  background-image: url("../images/header.jpg");
+  background-size: cover;
+}
+header h1, header p {
+  color: #ffffff;
+}
+header h1 {
+  font-family: "Playfair Display", serif;
+  font-weight: bold;
+  font-size: 50px;
+}
+header p {
+  font-size: 22px;
+}
+header .btn-get-started {
+  background-color: #ff9e53;
+  color: #ffffff;
+}
+header .btn-get-started:hover {
+  background-color: #ffaa69;
+  color: #ffffff;
 }/*# sourceMappingURL=main.css.map */
