--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -4,6 +4,7 @@ body {
     color: #071C4D;
 }
 
+// Navbar
 .navbar-brand{
     img{
         max-height: 40px;
@@ -41,4 +42,36 @@ body {
         color: #ffffff;
     }
 
+}
+
+// Header
+header{
+    padding: 180px 0 165px;
+    margin-top: -70px;
+    background-image: url('../images/header.jpg');
+    background-size: cover;
+
+    h1, p {
+        color: #ffffff;
+    }
+
+    h1 {
+        font-family: 'Playfair Display', serif;
+        font-weight: bold;
+        font-size: 50px;
+    }
+
+    p {
+        font-size: 22px;
+    }
+
+    .btn-get-started {
+        background-color: #ff9e53;
+        color: #ffffff;
+
+        &:hover {
+            background-color: #ffaa69;
+            color: #ffffff;
+        }
+    }
 }
