--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -57,4 +57,21 @@ header .btn-get-started {
 header .btn-get-started:hover {
   background-color: #ffaa69;
   color: #ffffff;
+}
+
+.section-stats {
+  margin-top: -50px;
+}
+.section-stats .stats-detail {
+  padding-top: 15px;
+  background-color: #ffffff;
+  padding-left: 40px;
+}
+.section-stats h2 {
+  font-size: 30px;
+  margin-bottom: 0;
+}
+.section-stats p {
+  font-size: 20px;
+  font-weight: lighter;
 }/*# sourceMappingURL=main.css.map */
