add Wisata Popular

--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -96,3 +96,65 @@ header{
         font-weight: lighter;
     }
 }
+
+// Wisata Popular
+.section-popular {
+    min-height: 540px;
+    background-color: #051334;
+    margin-top: -50px;
+    margin-bottom: -250px;
+
+    .section-popular-heading {
+        margin-top: 150px;
+
+        h2, p {
+            color: #ffffff;
+        }
+
+        h2 {
+            font-family: 'Playfair Display', serif;
+            font-weight: bold;
+            font-size: 40px;
+        }
+
+        p {
+            font-size: 18px;
+        }
+    }
+}
+
+// Popular Content
+.section-popular-content {
+    .section-popular-travel {
+        .card-travel {
+            min-height: 380px;
+            background-color: #000;
+            color: #ffffff;
+            padding: 30px;
+            background-size: cover;
+            margin-bottom: 20px;
+        }
+
+        .travel-country {
+            font-size: 18px;
+            color: #ffffff;
+        }
+
+        .travel-location {
+            font-size: 26px;
+            color: #ffffff;
+        }
+
+        .travel-button {
+            .btn-travel-details {
+                background-color: #ff9e53;
+                color: #ffffff;
+
+                &:hover {
+                    background-color: #ffa36f;
+                    color: #ffffff;
+                }
+            }
+        }
+    }
+}
