--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -158,3 +158,20 @@ header{
         }
     }
 }
+
+// Networks
+.section-networks {
+    background-color: #ffffff;
+    margin-top: -170px;
+    padding-top: 240px;
+    padding-bottom: 50px;
+
+    h2 {
+        font-family: 'Playfair Display', serif;
+        font-weight: bold;
+    }
+
+    img {
+        max-width: 100%;
+    }
+}
