--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: #e4e6eb;
+    background-color: #fff;
     font-family: 'Assistant', sans-serif;
     color: #071C4D;
 }
@@ -169,9 +169,98 @@ header{
     h2 {
         font-family: 'Playfair Display', serif;
         font-weight: bold;
+        font-size: 40px;
+    }
+
+    p {
+        font-size: 18px;
     }
 
     img {
         max-width: 100%;
+    }
+}
+
+// Testimonial Heading
+.section-testimonial-heading {
+    background: linear-gradient(#fff 0%, #f7f9ff 100%);
+    padding-top: 50px;
+    min-height: 506px;
+
+    h2 {
+        font-family: 'Playfair Display', serif;
+        font-weight: bold;
+        font-size: 40px;
+    }
+
+    p {
+        font-size: 18px;
+    }
+}
+
+// Testimonial Content
+.section-testimonial-content {
+    margin-top: -300px;
+    padding-bottom: 50px;
+
+    .card-testimonial {
+        padding: 40px 20px 10px;
+        border-radius: 11px;
+        margin-bottom: 20px;
+
+    .testimonial-content {
+        min-height: 380px;
+    }
+
+    h3 {
+        font-size: 22px;
+    }
+
+    .testimonial {
+        font-weight: 200;
+        font-size: 26px;
+        color: #6e6e6e;
+        min-height: 160px;
+    }
+
+    .trip-to {
+        font-weight: normal;
+        font-size: 22px;
+        color: #6e6e6e;
+    }
+
+    hr {
+        margin-left: -20px;
+        margin-right: -20px;
+    }
+
+    }
+}
+
+// btn cta
+.btn-get-started {
+    background-color: #ff9e53;
+        color: #ffffff;
+
+        &:hover {
+            background-color: #ffaa69;
+            color: #ffffff;
+        }
+}
+
+.btn-need-help {
+    background-color: #f2f2f2;
+        color: #c3c3c3;
+
+        &:hover {
+            background-color: #fafafa;
+            color: #c3c3c3;
+        }
+}
+
+// Footer
+.section-footer {
+    a {
+        color: #071C4D;
     }
 }
