add detail page

--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -264,3 +264,129 @@ header{
         color: #071C4D;
     }
 }
+
+// Detail Header
+.section-details-header {
+    min-height: 310px;
+    background: #e4e6eb;
+    margin-top: -70px;
+
+}
+
+// details content
+.section-details-content {
+    margin-top: -210px;
+    min-height: 100vh;
+    .breadcrumb {
+        background-color: transparent;
+        padding: 0;
+        margin-bottom: 30px;
+    }
+
+    .breadcrumb-item {
+        &.active {
+            font-weight: bold;
+            color: #071c4d;
+
+        }
+    }
+
+    // Card Detail
+    .card-details {
+        padding: 30px;
+        border-radius: 11px;
+
+        h1 {
+            font-size: 26px;
+        }
+
+        h2 {
+            font-size: 20px;
+        }
+
+        p {
+            font-size: 18px;
+            color: #b1b1b1;
+        }
+    }
+
+    .card-right {
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        border-bottom: 0;
+
+    }
+
+    .features {
+        margin-top: 20px;
+         
+        h3 {
+            font-size: 18px;
+            color: #071C4D;
+            margin-bottom: 0;
+         }
+
+         p {
+            margin-bottom: 0;
+
+         }
+
+         .description {
+            margin-left: 10px;
+            overflow: hidden;
+            float: left;
+         }
+
+         .features-image {
+            width: 45px;
+            height: 45px;
+            float: left;
+         }
+    }
+
+    .gallery {
+        .xzoom-container{
+            display: block;
+
+            .xzoom {
+                width: 100%;
+                box-shadow: none;
+                margin-bottom: 10px;
+            }
+
+            .xactive {
+                border: 4px solid #1a4c9c;
+                box-shadow: none;
+                width: 660px;
+                height: 350px;
+            }
+        }
+        
+    }
+
+    .member{
+        .member-image {
+            width: 40px;
+            height: 40px;
+            
+        }
+    }
+
+    .join-container {
+        margin-top: -16px;
+
+    }
+
+    .btn-join-now {
+        background-color: #ff9e53;
+        color: #fff;
+        border-radius: 0;
+
+        &:hover {
+            background-color: #ff857c;
+            color: #fff;
+        }
+    }
+
+}
+
