add checkout page (members)

--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -240,6 +240,40 @@ header .btn-get-started:hover {
   font-size: 18px;
   color: #b1b1b1;
 }
+.section-details-content .card-details .trip-informations th {
+  font-weight: 300;
+  font-size: 18px;
+  color: #071C4D;
+}
+.section-details-content .card-details .trip-informations td {
+  font-weight: 300;
+  font-size: 18;
+  color: #b1b1b1;
+}
+.section-details-content .card-details h3 {
+  font-weight: 600;
+  font-size: 14px;
+  color: #071C4D;
+}
+.section-details-content .card-details .disclaimer {
+  font-weight: 300;
+  font-size: 14px;
+  color: #b1b1b1;
+}
+.section-details-content .card-details .gj-datepicker .datepicker {
+  border-right: 0;
+}
+.section-details-content .card-details .gj-datepicker .input-group-append .btn {
+  padding-right: 30px;
+}
+.section-details-content .btn-add-now {
+  background-color: #071C4D;
+  color: #fff;
+}
+.section-details-content .btn-add-now:hover {
+  background-color: #1b3b86;
+  color: #fff;
+}
 .section-details-content .card-right {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
