--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -308,6 +308,55 @@ header{
             font-size: 18px;
             color: #b1b1b1;
         }
+
+        .trip-informations {
+            th {
+                font-weight: 300;
+                font-size: 18px;
+                color: #071C4D;
+            }
+
+            td {
+                font-weight: 300;
+                font-size: 18;
+                color: #b1b1b1;
+            }
+        }
+
+        h3 {
+            font-weight: 600;
+            font-size: 14px;
+            color: #071C4D;
+
+        }
+
+        .disclaimer {
+            font-weight: 300;
+            font-size: 14px;
+            color: #b1b1b1;
+        }
+
+        .gj-datepicker {
+            .datepicker{
+                border-right: 0;
+            }
+
+            .input-group-append {
+                .btn{
+                    padding-right: 30px;
+                }
+            }
+        }
+    }
+
+    .btn-add-now {
+        background-color: #071C4D;
+        color: #fff;
+
+        &:hover {
+            background-color: #1b3b86;
+            color: #fff;
+        }
     }
 
     .card-right {
