--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -240,6 +240,11 @@ header .btn-get-started:hover {
   font-size: 18px;
   color: #b1b1b1;
 }
+.section-details-content .card-details h3 {
+  font-weight: 300;
+  font-size: 14px;
+  color: #071C4D;
+}
 .section-details-content .card-details .trip-informations th {
   font-weight: 300;
   font-size: 18px;
@@ -250,9 +255,40 @@ header .btn-get-started:hover {
   font-size: 18;
   color: #b1b1b1;
 }
-.section-details-content .card-details h3 {
-  font-weight: 600;
+.section-details-content .card-details .trip-informations .text-blue {
+  color: #071C4D;
+  font-weight: bold;
+}
+.section-details-content .card-details .trip-informations .text-orange {
+  color: #ff9e53;
+  font-weight: bold;
+}
+.section-details-content .card-details .payment-instructions {
+  font-weight: 300;
   font-size: 14px;
+  color: #b1b1b1;
+}
+.section-details-content .card-details .bank .bank-image {
+  width: 45px;
+  height: 45px;
+  float: left;
+}
+.section-details-content .card-details .bank .bank-item {
+  font-size: 18px;
+  color: #071C4D;
+  margin-bottom: 0;
+}
+.section-details-content .card-details .bank .bank-item p {
+  margin-bottom: 0;
+}
+.section-details-content .card-details .bank .bank-item .description {
+  margin-left: 10px;
+  overflow: hidden;
+  float: left;
+}
+.section-details-content .card-details .bank .bank-item p {
+  font-weight: normal;
+  font-size: 16px;
   color: #071C4D;
 }
 .section-details-content .card-details .disclaimer {
