--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -365,4 +365,27 @@ header .btn-get-started:hover {
 .section-details-content .btn-join-now:hover {
   background-color: #ff857c;
   color: #fff;
+}
+
+.section-success {
+  height: 90vh;
+}
+.section-success h1 {
+  font-weight: 600;
+  font-size: 26px;
+  color: #071C4D;
+}
+.section-success p {
+  font-weight: 300;
+  font-size: 18px;
+  color: #b1b1b1;
+}
+.section-success .btn-home-page {
+  border-radius: 4px;
+  background-color: #071C4D;
+  color: #fff;
+}
+.section-success .btn-home-page:hover {
+  background-color: #2a488e;
+  color: #fff;
 }/*# sourceMappingURL=main.css.map */
