--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -489,3 +489,31 @@ header{
 
 }
 
+// Success Page
+.section-success {
+    height: 90vh;
+
+    h1 {
+        font-weight: 600;
+        font-size: 26px;
+        color: #071C4D;
+    }
+
+    p {
+        font-weight: 300;
+        font-size: 18px;
+        color: #b1b1b1;
+    }
+
+    .btn-home-page {
+        border-radius: 4px;
+        background-color: #071C4D;
+        color: #fff;
+
+        &:hover {
+            background-color: #2a488e ;
+            color: #fff;
+        }
+    }
+}
+
